Fixed the menu from going off screen

--- a/wp-content/themes/engage/assets/scss/components/_menu.scss
+++ b/wp-content/themes/engage/assets/scss/components/_menu.scss
@@ -48,6 +48,9 @@
   @include media($tablet) {
     margin-bottom: 0;
   }
+  @media screen and (max-width: $tablet) {
+    text-align: center;
+  }
 }
 
 .menu__main-menu {
@@ -198,7 +201,9 @@
   // margin-top: 15px;
   display: none;
   padding: 5px 0 5px 15px;
-  left: -15px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
   border-top: none;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
